website/versioned_docs/version-7.1.0/02_start__using_boilerplate.md
---
title: Create Your First Application Using Accelerator Toolkit
sidebar_label: Create Your First Application Using Accelerator Toolkit
copyright: (C) 2007-2019 GoodData Corporation
id: version-7.1.0-ht_create_your_first_visualization_toolkit
original_id: ht_create_your_first_visualization_toolkit
---

Create your first analytical application using GoodData **`create-gooddata-react-app`** and **Accelerator Toolkit**.

`create-gooddata-react-app` is a CLI-based tool that will guide you through the process of creating the application step by step in your terminal application.

This is what is going to happen when you run `create-gooddata-react-app`:

1. `create-gooddata-react-app` will download its packages and files to your computer.
2. When completed, it will ask you to select your domain from the list or let you enter your domain name manually.
3. Once you confirm your domain, the tool will install required dependencies and create the structure of your application.
4. It will then prompt you to start your application and will open the welcome page in your browser. The welcome page refer you to Accelerator Toolkit, which will allow you to set up your home dashboard with a test widget.

To start, go to [https://github.com/gooddata/gooddata-create-gooddata-react-app](https://github.com/gooddata/gooddata-create-gooddata-react-app), and follow the instructions in the README file.

**NOTE:** You must have a GoodData account (see [About GoodData.UI](01_intro__about_gooddataui.md#supported-technologies)).
